# clipboardstealer

./: .gitignore  Cargo.toml  LICENSE  README.md  README.txt  dist-workspace.toml
.github/workflows/: release.yml
old_code/: termion_terminal_size.txt
src/: clipboards.rs  color_theme.rs  config.rs  constants.rs  debug.rs  entries.rs  event.rs  layout.rs  layout_ratatui.rs  lib.rs  libmain.rs  linuxeditor.rs  log_conversion.rs  main.rs  pager.rs  screen.rs  scroller.rs  termionscreen.rs  tools.rs
src/screen/: color_theme_chooser.rs  editor_page.rs  first_page.rs  menu.rs  statusbardialog_y_n.rs  view_page.rs
testdata/: log.ndj
