[package]
name = "clipboardstealer"
version = "0.1.4"
edition = "2021"
authors = ["Frank Schwidom"]
description = "X11 Clipboardmanager which enforces the user choice"
license = "Apache-2.0"
license-file = "LICENSE"
homepage = "https://github.com/schwidom/clipboardstealer"
readme = "README.txt"

[dependencies]

# clipboard = "0"
termion = "4.0.3"
# clipboard_x11 = "0"
x11-clipboard = "0.9.3"
signal-hook = "0.3.17"
# xcb = "0"
xcb_1 = { package = "xcb", version = "1.5.0" }
chrono = "0.4.39"
# num = "0.4.3"
regex = "1.11.1"
clap_derive =  "4.5.28"
clap = { version = "4.5.31", features = ["derive"] }
nu-ansi-term = "0.50.1"
