[package]
name = "clipboardstealer"
version = "3.1.27"
edition = "2021"
authors = ["Frank Schwidom"]
description = "X11 clipboard manager which enforces the user choice"
license = "Apache-2.0"
license-file = "LICENSE"
homepage = "https://github.com/schwidom/clipboardstealer"
repository = "https://github.com/schwidom/clipboardstealer"
keywords = ["x11", "clipboard", "manager", "terminal", "tui"]
readme = "README.txt"

[dependencies]

# clipboard = "0"
termion = "4.0.6"
# clipboard_x11 = "0"
x11-clipboard = "0.9.3"
signal-hook = "0.4.3"
# xcb = "0"
xcb_1 = { package = "xcb", version = "1.7.0" }
chrono = "0.4.44"
# num = "0.4.3"
regex = "1.12.3"
clap_derive =  "4.5.55"
clap = { version = "4.5.60", features = ["derive"] }
nu-ansi-term = "0.50.3"
unicode-width = "0.2.2"
# textwrap = "0.16"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ratatui = { version = "0.30.0", features = ["termion"] }
tracing = "0.1"
tracing-subscriber = "0.3"
vim-line = "4"
enum-iterator = "2.3.0"
x11rb-protocol = "0.13"
lazy_static = "1.5.0"
mktemp = "0.5.1"
edit = "0.1.5"
version = "3.0.0"
rustix = "1.1.4"
libc = "0.2.183"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
